@@ -5,6 +5,8 @@
  */
 package io.debezium.connector.mongodb;
 
+import static org.fest.assertions.Assertions.assertThat;
+
 import java.util.Map;
 
 import org.apache.kafka.connect.data.Schema;
@@ -14,7 +16,7 @@ import org.bson.Document;
 import org.junit.Before;
 import org.junit.Test;
 
-import static org.fest.assertions.Assertions.assertThat;
+import io.debezium.connector.AbstractSourceInfo;
 
 /**
  * @author Randall Hauch
@@ -62,7 +64,7 @@ public class SourceInfoTest {
     @Test
     public void shouldSetAndReturnRecordedOffset() {
         Document event = new Document().append("ts", new BsonTimestamp(100, 2))
-                                       .append("h", new Long(1987654321))
+                                       .append("h", Long.valueOf(1987654321))
                                        .append("ns", "dbA.collectA");
 
         assertThat(source.hasOffset(REPLICA_SET_NAME)).isEqualTo(false);
@@ -126,7 +128,7 @@ public class SourceInfoTest {
     @Test
     public void shouldReturnRecordedOffsetForUsedReplicaName() {
         Document event = new Document().append("ts", new BsonTimestamp(100, 2))
-                                       .append("h", new Long(1987654321))
+                                       .append("h", Long.valueOf(1987654321))
                                        .append("ns", "dbA.collectA");
 
         assertThat(source.hasOffset(REPLICA_SET_NAME)).isEqualTo(false);
@@ -183,7 +185,7 @@ public class SourceInfoTest {
         source.startInitialSync(REPLICA_SET_NAME);
 
         Document event = new Document().append("ts", new BsonTimestamp(100, 2))
-                                       .append("h", new Long(1987654321))
+                                       .append("h", Long.valueOf(1987654321))
                                        .append("ns", "dbA.collectA");
 
         assertThat(source.hasOffset(REPLICA_SET_NAME)).isEqualTo(false);
@@ -209,4 +211,8 @@ public class SourceInfoTest {
         assertThat(struct.getBoolean(SourceInfo.INITIAL_SYNC)).isEqualTo(true);
     }
 
+    @Test
+    public void versionIsPresent() {
+        assertThat(source.offsetStructForEvent("rs", null).getString(AbstractSourceInfo.DEBEZIUM_VERSION_KEY)).isEqualTo(Module.version());
+    }
 }
